# SentencePieceSharp

./: README.md  SentencePieceSharp.sln
LibSentencePiece/: CMakeLists.txt  LibSentencePiece.vcxproj  LibSentencePiece.vcxproj.filters  library.cpp  library.h  macros.h
SentencePieceSharp/: ExtraOptions.cs  SentencePieceProcessor.cs  SentencePieceSharp.csproj
SentencePieceSharp.Examples/: Program.cs  SentencePieceSharp.Examples.csproj
SentencePieceSharp.Examples/models/: README.md
SentencePieceSharp/Native/: SentencePieceNativeLib.cs
